[package]
name = "sqlx-example-postgres-transaction-spawn"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.7.3", features = [ "postgres", "runtime-tokio-native-tls" ] }
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"]}
async-trait = "0.1.77"
